--- a/html/schedule.html
+++ b/html/schedule.html
@@ -8,8 +8,12 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
+
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css" />
+
 <link href="../styles.css" rel="stylesheet" />
 <link rel="shortcut icon" href="../images/favicon.png" />
+
 </head>
 
 <body>
@@ -69,95 +73,90 @@
 			<div class="scheduleSession">Registration</div>
 			
 			<div class="scheduleTime">9:00 AM &ndash; 10:30 AM</div>
-			<div class="scheduleSession">Session I</div>
-				<p class="scheduleSessionTitles"><a href="#two">Two Thumbs &hellip; Sideways</a><br />
-				<a href="#storytelling">It Begins with Storytelling</a><br />
-				<a href="#website">Don't Forget Your Website</a></p>
+			<div class="scheduleSession">Session I</div><br><br>
+			<div class="scheduleSessionTitles accordion">
+				<h3>Two Thumbs &hellip; Sideways</h3>
+					<div>
+					Evaluating your organization will strengthening your ability to assist those served, ease unnecessary strain on staff/volunteers and spotlight ways to utilize and/or increase funding. Attendees will leave with materials essential to evaluating their organization.
+					</div>
+				<h3>It Begins with Storytelling</h3>
+					<div>
+					People come to nonprofits for help, donors support nonprofits and volunteers assist nonprofits all base on your organization's story. Learn to develop your story and its value in attracting others to your cause.
+					</div>
+				<h3>Don't Forget Your Website</h3>
+					<div>
+					We never know how our next client, volunteer or sponsor will first encounter our organization. Social media's constantly changing nature means it receives a great deal of attention. However, websites should not be ignored. Let's look at other nonprofit websites and see what features you can incorporate in your own.
+					</div>
+			</div>
 			
 			<div class="scheduleTime">10:30 AM &ndash; 11:00 AM</div>
 			<div class="scheduleSession">Morning Break</div>
 			
 			<div class="scheduleTime">11:00 AM &ndash; 12:30 PM</div>
-			<div class="scheduleSession">Session II</div>
-				<p class="scheduleSessionTitles"><a href="#boardMembers">Board Members&#58; Volunteers & Champions</a><br />
-				<a href="#marketing">Marketing&#58; You Know More Than You Think</a><br />
-				<a href="#social">Simple Social Media Strategy</a></p>
-			
+			<div class="scheduleSession">Session II</div><br><br>
+			<div class="scheduleSessionTitles accordion">
+				<h3>Board Members&#58; Volunteers & Champions</h3>
+					<div>
+					An organization's board members are often its first volunteers. When an organization grows larger than the founders it sometimes becomes necessary for the board to focus on advocacy instead of day-to-day operations. Learn the various roles of board members as well as how to find and recruit individuals with the strengths you need.
+					</div>
+				<h3>Marketing&#58; You Know More Than You Think</h3>
+					<div>
+					Whether you realize it or not you are marketing. Are you creating content for blogs or social media? That is content marketing. Are you sending emails? That is email marketing. Come learn how to structure what you are already doing into a marketing plan. Formal plans increase the success of reaching your goals.
+					</div>
+				<h3>Simple Social Media Strategy</h3>
+					<div>
+					We constantly encounter national brands on various social media channels with complex campaigns. What is often forgotten is at one time they started small. Starting small, not being afraid to experiment, growing and adapting are how campaigns are created. Let's look at the various social media channels, their strengths &amp; weaknesses and how to get started.
+					</div>
+			</div>
+
 			<div class="scheduleTime">12:30 PM &ndash; 2:00 PM</div>
 			<div class="scheduleSession">Lunch</div>
 			
 			<div class="scheduleTime">2:00 PM &ndash; 3:30 PM</div>
-			<div class="scheduleSession">Session III</div>
-				<p class="scheduleSessionTitles"><a href="#volunteers">Volunteers Are More Than Free Labor</a><br />
-				<a href="#others">Others &quot;Out There&quot;</a><br />
-				<a href="#evolving">Evolving with Technology</a></p>
+			<div class="scheduleSession">Session III</div><br><br>
+			<div class="scheduleSessionTitles accordion">
+				<h3>Volunteers Are More Than Free Labor</h3>
+					<div>
+					On the surface volunteers are the labor organizations need to operate. Looking beyond the surface reveals that each volunteer fills several roles (i.e. donors, marketing staff and representatives.) Learn how to engage your volunteers and services that can assist with organizing volunteers.
+					</div>
+				<h3>Others &quot;Out There&quot;</h3>
+					<div>
+					Improving your skills means constantly learning in formal and informal settings. There are many people sharing their knowledge through blogs, social media and podcasts. Come learn who is &quot;out other&quot; and share who you follow. 
+					</div>
+				<h3>Evolving with Technology</h3>
+					<div>
+					Predicting with certainty what will happen in the future is impossible. However, some assumptions can be made. Increased adoption of smartphones and tablets mean mobile becomes just as important as websites and social media. We will look at trends in technology and how to develop a foundation that can adapt to changes. 
+					</div>
+			</div>				
 			
 			<div class="scheduleTime">3:30 PM &ndash; 4:00 PM</div>
 			<div class="scheduleSession">Afternoon Break</div>
 			
 			<div class="scheduleTime">4:00 PM &ndash; 5:30 PM</div>
-			<div class="scheduleSession">Session IV</div>
-				<p class="scheduleSessionTitles"><a href="#transition">Transitioning with Ease</a><br />
-				<a href="#littleThings">Little Things Matter</a><br />
-				<a href="#tools">Useful Tools You Can Afford</a></p>
+			<div class="scheduleSession">Session IV</div><br><br>
+			<div class="scheduleSessionTitles accordion">
+				<h3>Transitioning with Ease</h3>
+					<div>
+					While losing key staffers and volunteers can be difficult on a personal level, if plans are not put into place before their departure organizations also have the potential to lose time and access to important data or services. Learn how to better prepare for staff and volunteer transitions.
+					</div>
+				<h3>Little Things Matter</h3>
+					<div>
+					When you are small, possibly a team of one, setting prioritize is important. We will discuss aspects that appear small but have a huge impact on your ability to succeed. Topics include: Thank yous, internal communications, segmentation and the importance of images. 
+					</div>
+				<h3>Useful Tools You Can Afford</h3>
+					<div>
+					Graphic editors, stock photos, project management, email marketing, volunteer management are just some of the tools necessary to operate a nonprofit. Learn about free or low cost tools that will allow you to operate on a small budget. 
+					</div>
+			</div>			
 			
 			<div class="scheduleTime">7:00 PM &ndash; 10:00 PM</div>
 			<div class="scheduleSession">Closing Celebration</div>
 		
 		<br />
 		
-		<hr />
-		<div class="scheduleDate">Seminar and Workshop Descriptions</div><br />
-		<h3 class="descriptionSessions">Session I</h3>
-		<dl>	
-			<dt id="two">Two Thumbs &hellip; Sideways</dt>
-			<dd>Evaluating your organization will strengthening your ability to assist those served, ease unnecessary strain on staff/volunteers and spotlight ways to utilize and/or increase funding. Attendees will leave with materials essential to evaluating their organization.</dd>
-			<dt id="storytelling" class="scheduleWorkshops">It Begins with Storytelling</dt>
-			<dd>People come to nonprofits for help, donors support nonprofits and volunteers assist nonprofits all base on your organization's story. Learn to develop your story and its value in attracting others to your cause.</dd>
-			<dt id="website" class="scheduleWorkshops">Don't Forget Your Website</dt>
-			<dd>We never know how our next client, volunteer or sponsor will first encounter our organization. Social media's constantly changing nature means it receives a great deal of attention. However, websites should not be ignored. Let's look at other nonprofit websites and see what features you can incorporate in your own.</dd>
-		</dl>
-		<a href="#top"><img src="../images/back_to_top_arrow.png" alt="Back to Top" width="45" height="45" class="floatRight" /></a>
-		<br />
-		
-		<h3 class="descriptionSessions clear">Session II</h3>
-		
-		<dl>
-			<dt id="boardMembers">Board Members&#58; <br />First Volunteers, Most Visible Champions</dt>
-			<dd>An organization's board members are often its first volunteers. When an organization grows larger than the founders it sometimes becomes necessary for the board to focus on advocacy instead of day-to-day operations. Learn the various roles of board members as well as how to find and recruit individuals with the strengths you need.</dd>
-			<dt id="marketing" class="scheduleWorkshops">Marketing&#58; You Know More Than You Think</dt>
-			<dd>Whether you realize it or not you are marketing. Are you creating content for blogs or social media? That is content marketing. Are you sending emails? That is email marketing. Come learn how to structure what you are already doing into a marketing plan. Formal plans increase the success of reaching your goals.</dd>
-			<dt id="social" class="scheduleWorkshops">Simple Social Media Strategy</dt>
-			<dd>We constantly encounter national brands on various social media channels with complex campaigns. What is often forgotten is at one time they started small. Starting small, not being afraid to experiment, growing and adapting are how campaigns are created. Let's look at the various social media channels, their strengths &amp; weaknesses and how to get started.</dd>
-		</dl>
-		<a href="#top"><img src="../images/back_to_top_arrow.png" alt="Back to Top" width="45" height="45" class="floatRight" /></a>
 
 		
-		<h3 class="descriptionSessions clear">Session III</h3>
-		<dl>
-			<dt id="volunteers">Volunteers Are More Than Free Labor</dt>
-			<dd>On the surface volunteers are the labor organizations need to operate. Looking beyond the surface reveals that each volunteer fills several roles (i.e. donors, marketing staff and representatives.) Learn how to engage your volunteers and services that can assist with organizing volunteers.</dd>
-			<dt id="others" class="scheduleWorkshops">Others &quot;Out There&quot;</dt>
-			<dd>Improving your skills means constantly learning in formal and informal settings. There are many people sharing their knowledge through blogs, social media and podcasts. Come learn who is &quot;out other&quot; and share who you follow. </dd>
-			<dt id="evolving" class="scheduleWorkshops">Evolving with Technology</dt>
-			<dd>Predicting with certainty what will happen in the future is impossible. However, some assumptions can be made. Increased adoption of smartphones and tablets mean mobile becomes just as important as websites and social media. We will look at trends in technology and how to develop a foundation that can adapt to changes.</dd>
-		</dl>
-		<a href="#top"><img src="../images/back_to_top_arrow.png" alt="Back to Top" width="45" height="45" class="floatRight" /></a>
-		
-		<br />
-		
-		
-		<h3 class="descriptionSessions clear">Session IV</h3>
-		<dl>
-			<dt id="transition">Transitioning with Ease</dt>
-			<dd>While losing key staffers and volunteers can be difficult on a personal level, if plans are not put into place before their departure organizations also have the potential to lose time and access to important data or services. Learn how to better prepare for staff and volunteer transitions.</dd>
-			<dt id="littleThings" class="scheduleWorkshops">Little Things Matter</dt>
-			<dd>When you are small, possibly a team of one, setting prioritize is important. We will discuss aspects that appear small but have a huge impact on your ability to succeed. Topics include: Thank yous, internal communications, segmentation and the importance of images.</dd>
-			<dt id="tools" class="scheduleWorkshops">Useful Tools You Can Afford</dt>
-			<dd>Graphic editors, stock photos, project management, email marketing, volunteer management are just some of the tools necessary to operate a nonprofit. Learn about free or low cost tools that will allow you to operate on a small budget.</dd>
-		</dl>
-		<a href="#top"><img src="../images/back_to_top_arrow.png" alt="Back to Top" width="45" height="45" class="floatRight" /></a>
-		<br />
+
 		
 		
 		
@@ -191,6 +190,11 @@
 	</footer>
 	<!-- end of footer container -->
 	
+
+<script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+<script src="http://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
+<script src="../scripts/schedule.js"></script>
+
 </body>
 
 
